# pico-libraries

library-template/: CMakeLists.txt  README  demo.c  makeAndLoad.sh
library-template/library-template/: CMakeLists.txt  library-template.c  library-template.h
